// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Wrapper /> it renders a dark Wrapper 1`] = `
.c0 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  background-color: #ebeff3;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

@media (max-width:600px) {
  .c0 {
    padding: 0.625rem 1.25rem;
  }
}

@media print {
  .c0 {
    border: none;
    padding: 0 5pt;
  }
}

<div>
  <div
    class="c0"
  >
    this is a Button 
    dark
     
  </div>
</div>
`;

exports[`<Wrapper /> it renders a default Wrapper 1`] = `
.c0 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  border-color: transparent;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

@media (max-width:600px) {
  .c0 {
    padding: 0.625rem 1.25rem;
  }
}

@media print {
  .c0 {
    border: none;
    padding: 0 5pt;
  }
}

<div>
  <div
    class="c0"
  >
    this is a Button 
    default
     
  </div>
</div>
`;

exports[`<Wrapper /> it renders a light Wrapper 1`] = `
.c0 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  background-color: #fff;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

@media (max-width:600px) {
  .c0 {
    padding: 0.625rem 1.25rem;
  }
}

@media print {
  .c0 {
    border: none;
    padding: 0 5pt;
  }
}

<div>
  <div
    class="c0"
  >
    this is a Button 
    light
     
  </div>
</div>
`;

exports[`<Wrapper /> should render a large wrapper 1`] = `
.c0 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  padding: 2rem 2.5rem;
  border-color: transparent;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

@media (max-width:600px) {
  .c0 {
    padding: 0.625rem 1.25rem;
  }
}

@media print {
  .c0 {
    border: none;
    padding: 0 5pt;
  }
}

<div>
  <div
    class="c0"
  >
    I am a large wrapper
  </div>
</div>
`;
